# math-notes

./: .gitignore  README.md  mymacros.sty  pyproject.toml
AM_GM_proof/: AM_GM_proof.aux  AM_GM_proof.dvi  AM_GM_proof.md  AM_GM_proof.org  AM_GM_proof.out  AM_GM_proof.tex  mymacros.sty
Clebsch_Gordan/: Clebsch_Gordan.html  Clebsch_Gordan.org  Clebsch_Gordan.tex  mymacros.sty
LQG/: BF_theory_note.org  BF_theory_note.tex  GR_notes.org  GR_notes.tex  LQG_propagator.org  LQG_propagator.tex  mymacros.sty
cassinian_cookies/: Cassinian_cookies.org  Cassinian_cookies.tex  cassini2.eps  cassini2_weighted.eps  cassini3_aligned.eps  cassini3_omusubi.eps  cassini4_clover.eps  cassini4_omusubi.eps  cassini5_star.eps  compatibility_tripolar.eps  cookie2.eps  cookie3_omusubi.eps  cookie5_star.eps  mymacros.sty  tetrahedral_cassini.eps  tripolar_singular_points.eps
cayley_det/: Cayley_det.org  Cayley_det.tex
elliptic_theta_notes/: Diagrams.ipynb  elliptic_theta_note.html  elliptic_theta_note.org  elliptic_theta_note.tex
geometry-notes/: geometry-note.org  geometry-note.tex
inversion-of-conics/: conic_inversion.dvi  conic_inversion.html  conic_inversion.md  conic_inversion.org  conic_inversion.tex
pencil_of_circles/: pencil_of_circles.aux  pencil_of_circles.dvi  pencil_of_circles.tex
pointless-topology/: (Cambridge studies in advanced mathematics 3) Peter T. Johnstone - Stone spaces-Cambridge University Press (1982).djvu  Motivation-for-pointless-topology.ipynb  note.aux  note.dvi  note.tex
reading-notes/: Basic_Geometry_of_Voting.ipynb  Bollobas_Combinatorics.ipynb  (+5 more)
(+38 files in other folders)
