[tool.poetry]
name = "math-notes"
version = "0.1.0"
description = ""
authors = ["Hissanova"]

[tool.poetry.dependencies]
python = "^3.10"
JupyterNotebookReflection = "^0.0.11"
jupyter = "^1.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
